--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -20,10 +20,10 @@
 
   &__logo {
     position: relative;
+    font-size: 1rem;
     transition: color 100ms;
     letter-spacing: 4px;
     font-weight: 800;
-    font-size: 14px;
 
     &::after {
       content: '';
@@ -43,11 +43,11 @@
     position: relative;
 
     &-item {
+      font-size: 1rem;
       position: relative;
       transition: color 100ms;
       letter-spacing: 4px;
       font-weight: 800;
-      font-size: 14px;
       text-transform: uppercase;
       color: $text-dimmed;
       display: none;
@@ -143,7 +143,7 @@
     position: relative;
     color: $color--white;
     display: block;
-    font-size: 22px;
+    font-size: 1.375rem;
     font-weight: 800;
     letter-spacing: 6px;
     text-transform: uppercase;
