--- a/src/components/About.scss
+++ b/src/components/About.scss
@@ -12,6 +12,7 @@
     text-align: left;
     min-height: 29px;
     margin-left: 30px;
+    letter-spacing: 2px;
     line-height: 1.5;
 
     @include breakpoint('s') {
@@ -55,34 +56,30 @@
   }
 
   h1 {
+    font-family: 'Exotic', 'Helvetica', arial, sans-serif;
     text-transform: uppercase;
-    font-size: 3.2rem;
+    font-size: 5rem;
     color: $color--orange;
     letter-spacing: 6px;
     margin-bottom: 10px;
-    line-height: 1.2;
     padding: 0 20px;
+    line-height: 0.9;
 
     @include breakpoint('xs') {
-      font-size: 3.2rem;
+      font-size: 6rem;
     }
 
     @include breakpoint('s') {
-      font-size: 4rem;
+      font-size: 6.5rem;
     }
 
     @include breakpoint('m') {
-      font-size: 5.8rem;
+      font-size: 7.5rem;
       margin-bottom: 0;
     }
 
     @include breakpoint('l') {
-      font-size: 7.2rem;
-      line-height: 1.2;
-    }
-
-    span {
-      font-weight: 800;
+      font-size: 12rem;
     }
   }
 
