--- a/src/components/Contact.scss
+++ b/src/components/Contact.scss
@@ -24,8 +24,10 @@
   }
 
   p {
-    font-size: 16px;
     margin-bottom: 35px;
+    letter-spacing: 2px;
+    font-weight: 200;
+    line-height: 1;
 
     @include breakpoint('s') {
       max-width: 435px;
@@ -51,7 +53,7 @@
         textarea {
           width: 100%;
           color: $color--white;
-          font-size: 16px;
+          font-size: 1.25rem;
           padding: 0 20px;
           border-radius: 30px;
         }
@@ -65,6 +67,7 @@
           padding-top: 20px;
           min-height: 120px;
           resize: none;
+          font-weight: 100;
         }
       }
 
@@ -76,15 +79,21 @@
         height: 60px;
         width: 100%;
         color: $color--white;
-        font-size: 14px;
+        font-size: 0.875rem;
         font-weight: 800;
         padding: 0 20px;
         border-radius: 30px;
-        background-color: #f54f00;
+        background-color: #f05d18;
         border: 0;
 
         @include breakpoint('m') {
           max-width: 435px;
+        }
+
+        @include breakpoint('l') {
+          &:hover {
+            background-color: #f54f00;
+          }
         }
       }
     }
