--- a/src/components/About.scss
+++ b/src/components/About.scss
@@ -64,6 +64,17 @@
     margin-bottom: 10px;
     padding: 0 20px;
     line-height: 0.9;
+    background: #ffb76b;
+    background: radial-gradient(
+      circle farthest-side at center center,
+      #ffb76b 0%,
+      #ffa73d 30%,
+      #ff671f 60%,
+      #ff7f04 100%
+    );
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 
     @include breakpoint('xs') {
       font-size: 6rem;
