--- a/src/components/About.scss
+++ b/src/components/About.scss
@@ -6,7 +6,7 @@
 
   p {
     color: $text-dimmed;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     margin-bottom: 10px;
     width: 100%;
     text-align: left;
@@ -31,22 +31,20 @@
     }
 
     &:nth-of-type(2) {
-      font-size: 0.8rem;
+      font-size: 1.2rem;
       text-align: left;
       text-transform: uppercase;
       margin-left: 30px;
-      margin-bottom: 20px;
+      margin-bottom: 28px;
 
       @include breakpoint('s') {
         min-height: 48px;
-        margin-bottom: 0;
         margin-left: 50px;
       }
 
       @include breakpoint('l') {
-        font-size: 1.2rem;
+        font-size: 1.5rem;
         margin-left: 70px;
-        margin-bottom: 0;
       }
 
       span {
@@ -81,7 +79,7 @@
     }
 
     @include breakpoint('s') {
-      font-size: 6.5rem;
+      line-height: 1;
     }
 
     @include breakpoint('m') {
