--- a/src/components/About.scss
+++ b/src/components/About.scss
@@ -29,28 +29,6 @@
     &:nth-of-type(1) span {
       font-weight: 100;
     }
-
-    &:nth-of-type(2) {
-      font-size: 1.2rem;
-      text-align: left;
-      text-transform: uppercase;
-      margin-left: 30px;
-      margin-bottom: 28px;
-
-      @include breakpoint('s') {
-        min-height: 48px;
-        margin-left: 50px;
-      }
-
-      @include breakpoint('l') {
-        font-size: 1.5rem;
-        margin-left: 70px;
-      }
-
-      span {
-        font-weight: 800;
-      }
-    }
   }
 
   h1 {
@@ -89,6 +67,37 @@
 
     @include breakpoint('l') {
       font-size: 12rem;
+    }
+  }
+
+  .role-container {
+    color: $text-dimmed;
+    display: flex;
+    font-size: 1.2rem;
+    text-align: left;
+    letter-spacing: 2px;
+    line-height: 1.5;
+    text-transform: uppercase;
+    margin-left: 30px;
+    margin-bottom: 28px;
+
+    @include breakpoint('s') {
+      min-height: 48px;
+      margin-left: 50px;
+    }
+
+    @include breakpoint('l') {
+      font-size: 1.5rem;
+      margin-left: 70px;
+    }
+
+    span:nth-of-type(1) {
+      font-weight: 100;
+      margin-right: 5px;
+    }
+
+    span:nth-of-type(2) {
+      font-weight: 300;
     }
   }
 
