--- a/src/components/About.scss
+++ b/src/components/About.scss
@@ -26,7 +26,7 @@
       font-size: 2rem;
     }
 
-    &:nth-of-type(1) span {
+    span {
       font-weight: 100;
     }
   }
@@ -75,7 +75,7 @@
     display: flex;
     font-size: 1.2rem;
     text-align: left;
-    letter-spacing: 2px;
+    letter-spacing: 4px;
     line-height: 1.5;
     text-transform: uppercase;
     margin-left: 30px;
