--- a/src/components/Contact.scss
+++ b/src/components/Contact.scss
@@ -34,6 +34,10 @@
     }
   }
 
+  p:nth-of-type(2) {
+    margin-bottom: 16px;
+  }
+
   form {
     .contact-panel__buttons {
       display: flex;
@@ -85,6 +89,7 @@
         border-radius: 30px;
         background-color: #f05d18;
         border: 0;
+        margin-bottom: 16px;
 
         @include breakpoint('m') {
           max-width: 435px;
@@ -97,6 +102,11 @@
         }
       }
     }
+  }
+
+  .copy-to-clipboard svg {
+    color: #15c715;
+    padding-left: 5px;
   }
 }
 
