--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -16,14 +16,10 @@ footer:not(.nav__footer) {
   }
 }
 
-.footer__legend,
-.footer__copyright {
-  pointer-events: none;
-  width: 100%;
-}
-
 .footer__copyright {
   color: $text-dimmed;
+  pointer-events: none;
+  width: 100%;
   font-size: 0.875rem;
   text-align: center;
   border-top: 1px solid #151515;
@@ -33,27 +29,13 @@ footer:not(.nav__footer) {
 
 .footer__legend {
   color: rgba(255, 255, 255, 0.6);
+  width: 100%;
   padding-bottom: 20px;
   height: auto;
-  font-size: 0.625rem;
   text-transform: uppercase;
   font-size: 0.875rem;
 
-  span {
-    position: relative;
-
-    &::after {
-      position: absolute;
-      top: 50%;
-      right: 0;
-      left: 0;
-      background-color: $color--orange;
-      content: '';
-      transition: transform 200ms;
-      height: 1px;
-      border-radius: 4px;
-      transform: scaleX(1);
-      transform-origin: center left;
-    }
+  a {
+    color: #61dbfb;
   }
 }
