--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -23,19 +23,11 @@ footer:not(.nav__footer) {
   font-size: 0.875rem;
   text-align: center;
   border-top: 1px solid #151515;
-  padding-top: 20px;
+  padding-top: 30px;
   margin-bottom: 12px;
-}
+  font-weight: 800;
 
-.footer__legend {
-  color: rgba(255, 255, 255, 0.6);
-  width: 100%;
-  padding-bottom: 20px;
-  height: auto;
-  text-transform: uppercase;
-  font-size: 0.875rem;
-
-  a {
-    color: #61dbfb;
+  span {
+    font-weight: 200;
   }
 }
