--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -10,7 +10,7 @@
   height: 60px;
   padding: 0 20px;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
   z-index: 81;
 
